fix size issue on mobile layout

--- a/css/styles.css
+++ b/css/styles.css
@@ -111,7 +111,7 @@ body {
 
   .content-big {
     background-color: paleVioletRed;
-    height: 800px;
+    height: 900px;
   }
 
   .content-small {
